# nn-from-scratch

./: AnyMovable.h  CMakeLists.txt  DataHandler.cpp  DataHandler.h  Except.cpp  Except.h  Layer.cpp  Layer.h  Loss.cpp  Loss.h  NeuralNetwork.cpp  NeuralNetwork.h  Optimizer.cpp  Optimizer.h  OptimizerState.cpp  OptimizerState.h  README.md  SoftmaxLayer.cpp  SoftmaxLayer.h  Utils.cpp  Utils.h  main.cpp
